add product page

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
         <div class="project-items" data-css-animate="trigger">
-            <div class="row" data-projectsAutocount="container">
+            <div class="row no-gutters" data-projectsAutocount="container">
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item ">
                         <h3>Collected funds</h3>
@@ -185,7 +185,7 @@
             <div class="news-item" data-css-animate="trigger">
                 <div class="news-item-header">
                     <div class="news-category-label">
-                        <span style="background-color: #944d92;">CoinJapan</span>
+                        <span style="background-color: #e30808;">CoinJapan</span>
                     </div>
                     <div class="news-date">
                         21st June, 2018
@@ -198,7 +198,7 @@
             <div class="news-item" data-css-animate="trigger">
                 <div class="news-item-header">
                     <div class="news-category-label">
-                        <span style="background-color: #97c15e;">Clients</span>
+                        <span style="background-color: #2c91f1;">Clients</span>
                     </div>
                     <div class="news-date">
                         21st June, 2018
@@ -211,7 +211,7 @@
             <div class="news-item" data-css-animate="trigger">
                 <div class="news-item-header">
                     <div class="news-category-label">
-                        <span style="background-color: #f95959;">Japan</span>
+                        <span style="background-color: #f19b2c;">Japan</span>
                     </div>
                     <div class="news-date">
                         21st June, 2018
@@ -224,7 +224,7 @@
             <div class="news-item" data-css-animate="trigger">
                 <div class="news-item-header">
                     <div class="news-category-label">
-                        <span style="background-color: #944d92;">CoinJapan</span>
+                        <span style="background-color: #e30808;">CoinJapan</span>
                     </div>
                     <div class="news-date">
                         21st June, 2018
@@ -238,7 +238,7 @@
             <div class="news-item" data-css-animate="trigger">
                 <div class="news-item-header">
                     <div class="news-category-label">
-                        <span style="background-color: #688cc2;">World</span>
+                        <span style="background-color: #f5c450;">World</span>
                     </div>
                     <div class="news-date">
                         21st June, 2018
@@ -263,7 +263,7 @@
             <div class="partners-next-container col-md-1">
                 <div class="partners-prev"></div>
             </div>
-            <div class="owl-carousel col-md-10">
+            <div class="owl-carousel index-partners-slider col-md-10">
                 <div class="row no-gutters">
                     <div class="col-12 partner-item">
                         <img src="img/partners-carousel/paybis.png" alt="paybis">
