--- a/projects.html
+++ b/projects.html
@@ -93,6 +93,42 @@
         </div>        
     </section><!-- TITLE -->
 
+    <section class="services-description">
+        <div class="cj-container">
+            <h2>Your success story begins here</h2>
+
+            <div class="services-description-text">
+                <div class="services-description-list">
+                    <hr>
+                    <p>Three fundamental conditions for gaining success in the Japanese market:</p>
+                    <ol>
+                        <li>Professional localization</li>
+                        <li>Effective strategic planning</li>
+                        <li>Willingness to follow the Japanese business rules</li>
+                    </ol>
+                </div>
+                The Japanese market is one of the most dynamic and attractive markets, but it is not an easy task to conquer it. It does not matter what your company reached and if it has the name in the world or not. The strategy that you have used earlier will not bring you any benefit in Japan. Rather on the contrary. In the best case it will slow down the promotion of the product, how it happened with Uber and FaceBook, which could not fully capture Japanese market. In the worst case you will have to cease your activity, how it happened with eBay. Other, equally well-known companies such as Amazon, Apple, Starbucks were able to stay in the Japanese market and even take a leadership position just because they have changed their strategy. They have adapted to the specificity of the Japanese market, its culture and accepted business rules.
+            </div>
+        </div>
+    </section><!-- DESCRIPTION -->
+
+
+    <section class="services-steps">
+        <div class="cj-container">
+            <div class="row row no-gutters">
+                <div class="col-md-6 services-moto background-color-grey">
+                    <hr>    
+                    <p>Partnerships with CoinJapan is your guarantee of entering Japanese market for the providing of hyper-growth your product. We can help to raise funds for you because we understand the market, know its features, requirements and business rules.</p>
+                    <hr>
+                </div>
+                <div class="col-md-6 steps-img">
+                    <img src="img/DSC_3387ee.jpg" alt="room">
+                </div>
+            </div>
+        </div>
+    </section><!-- STEPS -->
+
+
     <section class="projects-in-numbers">
     <div class="cj-container">
         <h2 class="section-header" data-css-animate="trigger">Achievements</h2>
@@ -116,8 +152,8 @@
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item project-item-last">
                         <h3>Attracted investors</h3>
-                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="2500"
-                                                                data-to="3000">3000</span><span>+</span></p>
+                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="350"
+                                                                data-to="400000000"></span></p>
                     </div>
                 </div>
             </div>
@@ -125,32 +161,27 @@
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item ">
                         <h3>Attracted investors</h3>
-                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="267"
-                                                                 data-to="400">400</span>+</p>
+                        <p class="partners-number-medium">+<span data-projectsAutocount="field" data-from="267"
+                                                                 data-to="300">300</span></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item project-item-middle">
                         <h3>Average contribution of one investor</h3>
-                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267"
-                                                                 data-to="400">400</span><span
-                                class="partner-number-description">Million</span></p>
+                        <p class="partners-number-medium">$<span  data-projectsAutocount="field" data-from="267"
+                                                                 data-to="129000">129000</span></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item project-item-last">
                         <h3>Average time to launching ICO</h3>
-                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267"
-                                                                 data-to="400">400</span><span
-                                class="partner-number-description">Million</span></p>
+                        <p><span  data-projectsAutocount="field" data-from="1"
+                                                                 data-to="3">3</span><span
+                                class="partner-number-description">month</span></p>
                     </div>
                 </div>
             </div>
-            <div class="cj-btn-container">
-                <a href="#" class="cj-btn" data-css-animate="trigger"><span>Read more</span></a>
-            </div>
         </div>
-
     </div>
 </section>
 
@@ -184,47 +215,33 @@
                     </div>
                 </div>
             </div>
+            <div class="row no-gutters">
+                <p class="projects-partners-end">*Most projects cannot be shared due to NDA</p>
+            </div>
         </div>
     </section><!-- PROJECTS-PARTNERS -->
 
     <section class="clients-reviews">
         <div class="cj-container">
             <h2 class="section-header animated fadeInUp" data-css-animate="trigger">What our clients say</h2>
-            <article class="review-item">
-                <p class="client-review">
-                    Thanks to the rapid response of our cybersecurity partners - Hacken, the phishing attack was repelled and all efforts of the criminals were eliminated in no time. Only 2 hours passed from the start of the work of phishing sites to the moment of their disconnection.
-                </p>
-                <div class="client-info">
-                    <div class="client-photo-wrapper">
-                        <img src="img/max.png">
+            <div class="owl-carousel review-clients-slider">
+                <div class="review-item">
+                    <p class="client-review">
+                        Thanks to the rapid response of our cybersecurity partners - Hacken, the phishing attack was repelled and all efforts of the criminals were eliminated in no time. Only 2 hours passed from the start of the work of phishing sites to the moment of their disconnection.
+                    </p>
+                    <div class="client-info">
+                        <div class="client-photo-wrapper">
+                            <img src="img/max.png">
+                        </div>
+                        <div>
+                            <p class="client-name">Maxim Prasolov</p>
+                            <p class="client-position">Neuromation</p>
+                        </div>
                     </div>
-                    <div>
-                        <p class="client-name">Maxim Prasolov</p>
-                        <p class="client-position">Neuromation</p>
-                    </div>
-                </div>
-            </article>
-        </div>
-    </section>
-
-    <section class="bottom-links">
-        <div class="cj-container background-color-grey">
-            <div class="bottom-links-container">
-                <div class="link-item-wrapper" data-css-animate="trigger">
-                    <a href="services.html">
-                        <img src="img/links/DSC_3272.jpg" alt="A lamp">
-                        <span>Services</span>
-                    </a>
-                </div>
-                <div class="link-item-wrapper" data-css-animate="trigger">
-                    <a href="projecs.html">
-                        <img src="img/links/DSC_3244.jpg" alt="Toy">
-                        <span>Projects</span>
-                    </a>
                 </div>
             </div>
         </div>
-    </section><!-- LINKS -->
+    </section>
 
     <footer class="footer">
         <div class="footer-container">
