--- a/contacts.html
+++ b/contacts.html
@@ -119,7 +119,7 @@
 
     <section class="contact-form">
     	<div class="cj-container">
-    		<h2 class="section-header" data-css-animate="trigger">Сontact Us Now</h2>
+    		<h2 class="section-header" data-css-animate="trigger">Let's keep in touch</h2>
             <div class="row no-gutters contact-form-padding">
                 <div class="col-md-6">
                     <div class="contact-form-wrapper">
@@ -134,7 +134,7 @@
                                 </div>
                                 <div class="col-md-6 contact-form-inputs">
                                     <div class="cj-form-group">
-                                         <label class="cj-form-label" for="name">Email</label>
+                                         <label class="cj-form-label" for="email">Your Email</label>
                                     <input class="contact-form-input" type="text" name="email" id="email" placeholder="Enter your email address">
                                     <span class="focus-input"></span>
                                     </div>
@@ -142,17 +142,17 @@
                             </div>
                             <div class="row no-gutters">
                                 <div class="col-md-12">
-                                    <div class="cj-form-group">
-                                           <label class="cj-form-label" for="name">Email</label>
-                                    <textarea class="contact-form-textarea" name="message" id="message" placeholder="Your message here"></textarea>
-                                    <span class="focus-input"></span>
+                                    <div class="cj-form-group cj-form-text-area-wrapper">
+                                           <label class="cj-form-label" for="message">Message</label>
+                                        <textarea class="contact-form-textarea" name="message" id="message" placeholder="Your message here"></textarea>
+                                        <span class="focus-input"></span>
                                     </div>
                                 </div>
                             </div>
                             <div class=" row no-gutters">
                                 <div class="col-sm-12 col-md-12">
                                     <div class="cj-btn-container">
-                                        <button type="submit" class="cj-btn" data-css-animate="trigger"><span>Send</span></button>
+                                        <button type="submit" class="cj-btn" data-css-animate="trigger"><span>Send now</span></button>
                                     </div>
                                 </div>
                             </div>
