Finished Desctop Version

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/lib/animate.min.css">
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Jaldi:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Jaldi:400,700" rel="stylesheet">
 
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/common.css">
@@ -62,7 +62,7 @@
                     <li><a class="active-nav-item" href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="#">Partners</a></li>
+                    <li><a href="partners.html">Partners</a></li>
                     <li><a href="#">Carriers</a></li>
                     <li><a href="contacts.html">Contacts</a></li>
                     <li><a href="#">News</a></li>
@@ -95,10 +95,11 @@
 
     <div class="cj-container">
 
+        <h2 class="page-main-heading">Who we are</h2>
+
         <div class="row no-gutters">
             <div class="col-12">
                 <article class="about-description-main-text">
-                    <h2>Who we are</h2>
                     <p>Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine
                         efforts of open-minded professionals, which are passionate by blockchain technology,
                         cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we
