--- a/contacts.html
+++ b/contacts.html
@@ -64,7 +64,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="#">Partners</a></li>
+                        <li><a href="partners.html">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
                         <li><a class="active-nav-item" href="contacts.html">Contacts</a></li>
                         <li><a href="#">News</a></li>
@@ -121,7 +121,7 @@
     	<div class="cj-container">
     		<h2 class="section-header" data-css-animate="trigger">Let's keep in touch</h2>
             <div class="row no-gutters contact-form-padding">
-                <div class="col-md-6">
+                <div class="col-md-6  offset-md-3">
                     <div class="contact-form-wrapper">
                         <form action="POST">
                             <div class="row no-gutters">
@@ -158,9 +158,6 @@
                             </div>
                         </form>
                     </div>
-                </div>
-                <div class="col-md-6 contact-form-side-img-wrapper">
-                    <img src="img/pages/DSC_3165.jpg" alt="">
                 </div>
             </div>
            
