--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a class="active-nav-item" href="projects.html">Projects</a></li>
-                        <li><a href="#">Partners</a></li>
+                        <li><a href="partners.html">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
                         <li><a href="contacts.html">Contacts</a></li>
                         <li><a href="#">News</a></li>
@@ -95,7 +95,7 @@
 
     <section class="services-description">
         <div class="cj-container">
-            <h2>Your success story begins here</h2>
+            <h2 class="page-main-heading">Your success story begins here</h2>
 
             <div class="services-description-text">
                 <div class="services-description-list">
