--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="#">Partners</a></li>
+                    <li><a href="partners.html">Partners</a></li>
                     <li><a href="#">Carriers</a></li>
                     <li><a href="contacts.html">Contacts</a></li>
                     <li><a href="#">News</a></li>
