--- a/services.html
+++ b/services.html
@@ -66,7 +66,7 @@
                         <li><a href="about.html">About</a></li>
                         <li><a class="active-nav-item" href="services.html">Services</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="#">Partners</a></li>
+                        <li><a href="partners.html">Partners</a></li>
                         <li><a href="#">Carriers</a></li>
                         <li><a href="contacts.html">Contacts</a></li>
                         <li><a href="#">News</a></li>
@@ -98,7 +98,7 @@
     
     <section class="services-description">
         <div class="cj-container">
-            <h2>Your success story begins here</h2>
+            <h2 class="page-main-heading">Your success story begins here</h2>
 
             <div class="services-description-text">
                 <div class="services-description-list">
