Finished Desctop Version

--- a/partners.html
+++ b/partners.html
@@ -139,6 +139,9 @@
         <article class="partners-page-wanted-text-wrapper">
             <p>Now is the age of blockchain. It is very favorable conditions that allow to be a little bit ahead of a trend. Now is the time for taking decisions quickly and sharply. Never before it wasn’t so important. The CoinJapan company seeks partners, who have the same vision concerning blockchain, strong desire to change the world for better, and don’t afraid to run ahead more quickly than other.</p>
         </article>
+        <div class="cj-btn-container">
+            <a href="#" class="cj-btn" data-css-animate="trigger"><span>Contact us</span></a>
+        </div>
     </div>
 </section>
 
