Started career page

--- a/career.html
+++ b/career.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Partners</title>
+    <title>Careers</title>
 
     <link rel="stylesheet" href="css/lib/owl.carousel.min.css">
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
@@ -30,9 +30,9 @@
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
     <script type="text/javascript" src="js/breadcrump.js"></script>
-
 </head>
 <body>
+
 <div class="cj-container">
     <div class="go-to-top" data-go-to-top="btn">
         <img src="img/arrowGoToTop.png" alt="go to top">
@@ -55,8 +55,8 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a class="active-nav-item" href="partners.html">Partners</a></li>
-                    <li><a href="career.html">Carriers</a></li>
+                    <li><a href="partners.html">Partners</a></li>
+                    <li><a class="active-nav-item" href="career.html">Carriers</a></li>
                     <li><a href="contacts.html">Contacts</a></li>
                     <li><a href="#">News</a></li>
                 </ul>
@@ -75,75 +75,60 @@
 <section class="page-title contacts-title-bg" data-parallax="scroll">
     <div class="page-titke-overlay">
         <div class="cj-container">
-            <h1>Partners</h1>
+            <h1>Careers</h1>
             <ul class="breadcrumbs">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contacts.html">Partners</a></li>
+                <li><a href="contacts.html">Careers</a></li>
             </ul>
         </div>
     </div>
 </section><!-- TITLE -->
 
-<section class="partners-page-description">
+<section class="career-page-about">
     <div class="cj-container">
-        <h2 class="page-main-heading">In blockchain we trust</h2>
-        <article class="partners-page-description-wrapper">
-            <p>Now the terms blockchain techs and cryptocurrency are closely related to the growing of their importance all around the world. CoinJapan wants to be in a center of this activity. That’s why we are forming strong and long duration partnership with other players within the industry. Here is a list of partners, companies and organizations, which work with us for development and improving completely new but the prospective area. </p>
-        </article>
-    </div>
-</section>
-
-<section class="partners-page-picture-separator">
-    <div class="cj-container">
-        <img src="img/pages/citys-img.jpg" alt="City Views">
-    </div>
-</section>
-
-<section class="partners-page-partners">
-    <div class="cj-container">
-        <h2 class="section-header" data-css-animate="trigger">Partners</h2>
-        <div class="row no-gutters partners-list-wrapper">
-            <div class="col-md-4 partners-list-item">
-                <a href="#">
-                    <img src="img/partners-carousel/paybis.png" alt="partner 1">
-                </a>
+        <h2 class="section-header" data-css-animate="trigger">What we do</h2>
+        <div class="career-page-about-wrapper row no-gutters">
+            <div class="col-md-6">
+                <article>
+                    <p>Pellentesque pulvinar pellentesque habitant morbi tristique. Id diam vel quam elementum pulvinar etiam. Tristique senectus et netus et. Lacus viverra vitae congue eu. Interdum velit laoreet id donec ultrices tincidunt arcu non. Elementum facilisis leo vel fringilla est. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Interdum velit euismod in pellentesque. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Lacus vel facilisis volutpat est velit egestas dui id ornare.Pellentesque pulvinar pellentesque</p>
+                </article>
             </div>
-            <div class="col-md-4 partners-list-item">
-                <a href="#">
-                    <img src="img/partners-carousel/coinbazz.png" alt="partner 2">
-                </a>
-            </div>
-            <div class="col-md-4 partners-list-item">
-                <a href="#">
-                    <img src="img/partners-carousel/growth.png" alt="partner 3">
-                </a>
-            </div>
-            <div class="col-md-4 offset-md-2 partners-list-item">
-                <a href="#">
-                    <img src="img/partners-carousel/blockweather.png" alt="partner 4">
-                </a>
-            </div>
-            <div class="col-md-4 partners-list-item">
-                <a href="#">
-                    <img src="img/partners-carousel/microsoftazure.png" alt="partner 5">
-                </a>
+            <div class="col-md-6">
+                <img src="img/DSC_3253.jpg" alt="side img">
             </div>
         </div>
     </div>
 </section>
 
-<section class="partners-page-wanted">
+<section class="career-page-positions">
     <div class="cj-container">
-        <h2 class="section-header">Get in touch</h2>
-        <article class="partners-page-wanted-text-wrapper">
-            <p>Now is the age of blockchain. It is very favorable conditions that allow to be a little bit ahead of a trend. Now is the time for taking decisions quickly and sharply. Never before it wasn’t so important. The CoinJapan company seeks partners, who have the same vision concerning blockchain, strong desire to change the world for better, and don’t afraid to run ahead more quickly than other.</p>
-        </article>
-
-        <div class="cj-btn-container">
-            <a href="#" class="cj-btn" data-css-animate="trigger"><span>Contact us</span></a>
+        <h2 class="section-header" data-css-animate="trigger">Open positions in CoinJapan</h2>
+        <div class="positions-wrapper">
+            <div class="position row no-gutters">
+                <div class="col-md-12">
+                    <h3>Japanese Translator</h3>
+                </div>
+                <div class="col-md-2">
+                    <p>Location: Ukraine, Kiev</p>
+                </div>
+                <div class="col-md-2">
+                    <p>Date: 2018/04/01</p>
+                </div>
+                <div class="col-md-8">
+                    <p>Department: Operation</p>
+                </div>
+                <div class="col-md-12">
+                    <p>Enim neque volutpat ac tincidunt vitae. Eget nunc lobortis mattis aliquam faucibus. Amet aliquam id diam maecenas ultricies mi eget mauris pharetra. Non diam phasellus vestibulum lorem sed risus ultricies. Ut venenatis tellus in </p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
+
+<section class="">
+
+</section>
+
 
 <footer class="footer">
     <div class="footer-container">
