--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
                         <li><a href="services.html">Services</a></li>
                         <li><a class="active-nav-item" href="projects.html">Projects</a></li>
                         <li><a href="partners.html">Partners</a></li>
-                        <li><a href="#">Carriers</a></li>
+                        <li><a href="career.html">Carriers</a></li>
                         <li><a href="contacts.html">Contacts</a></li>
                         <li><a href="#">News</a></li>
                     </ul>
@@ -136,24 +136,20 @@
             <div class="row no-gutters achievements-row" data-projectsAutocount="container">
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item ">
-                        <h3>Collected funds</h3>
-                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="267"
-                                                                 data-to="400">400</span><span
-                                class="partner-number-description">Million</span></p>
+                        <h3>Performed Projects</h3>
+                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="1" data-to="15">15</span></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item project-item-middle">
                         <h3>Successful ICOs</h3>
-                        <p><span class="success-ico-color partners-number-medium" data-projectsAutocount="field"
-                                 data-from="7" data-to="15">15</span></p>
+                        <p><span class="success-ico-color partners-number-medium" data-projectsAutocount="field" data-from="2" data-to="15">15</span></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item project-item-last">
-                        <h3>Attracted investors</h3>
-                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="350"
-                                                                data-to="400000000"></span></p>
+                        <h3>Collected funds</h3>
+                        <p class="partners-number-medium">$<span data-projectsAutocount="field" data-from="100" data-to=400">400</span><span class="partner-number-description">Million</span></p>
                     </div>
                 </div>
             </div>
@@ -161,23 +157,19 @@
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item ">
                         <h3>Attracted investors</h3>
-                        <p class="partners-number-medium">+<span data-projectsAutocount="field" data-from="267"
-                                                                 data-to="300">300</span></p>
+                        <p class="partners-number-medium"><span data-projectsAutocount="field" data-from="400" data-to="3100">3100</span>+</p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item project-item-middle">
                         <h3>Average contribution of one investor</h3>
-                        <p class="partners-number-medium">$<span  data-projectsAutocount="field" data-from="267"
-                                                                 data-to="129000">129000</span></p>
+                        <p class="partners-number-medium">$<span  data-projectsAutocount="field" data-from="267" data-to="129">129</span><span class="partner-number-description">Thousand</span></p>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-4">
                     <div class="project-item project-item-last">
                         <h3>Average time to launching ICO</h3>
-                        <p><span  data-projectsAutocount="field" data-from="1"
-                                                                 data-to="3">3</span><span
-                                class="partner-number-description">month</span></p>
+                        <p><span  data-projectsAutocount="field" data-from="1" data-to="3">3</span><span class="partner-number-description">Month</span></p>
                     </div>
                 </div>
             </div>
