--- a/contacts.html
+++ b/contacts.html
@@ -65,7 +65,7 @@
                         <li><a href="services.html">Services</a></li>
                         <li><a href="projects.html">Projects</a></li>
                         <li><a href="partners.html">Partners</a></li>
-                        <li><a href="#">Carriers</a></li>
+                        <li><a href="career.html">Carriers</a></li>
                         <li><a class="active-nav-item" href="contacts.html">Contacts</a></li>
                         <li><a href="#">News</a></li>
                     </ul>
